...
            importManager.updates.collect { update ->
                when (update) {
                    ImportWorkUpdate.Idle -> importWorkActive = false
                    is ImportWorkUpdate.Running -> importWorkActive = true
                    is ImportWorkUpdate.Success -> {
                        importWorkActive = false
                        showSnackbar("小说导入成功")
                    }
                    is ImportWorkUpdate.Duplicate -> {
                        importWorkActive = false
                        showSnackbar("这本小说已经在书架中")
                    }
                    is ImportWorkUpdate.Failure -> {
                        importWorkActive = false
                        showSnackbar(update.message)
                    }
                }
...
